# Quantum-ML-Classifier

./: .gitignore  LICENSE  PRODUCTION_DEPLOYMENT.md  Quantum-Classical Hybrid ML System Implementation Plan.md  README.md  VERCEL_ENV.md  checkpoint(current progress).md  main.py  pyproject.toml  requirements.txt
ci_cd/.github/workflows/: quality-gates.yml
configs/experiments/: depth_scaling.yaml  encoding_comparison.yaml
experiments/: __init__.py  run_all_experiments.py
experiments/suite_1_architecture/: __init__.py  exp_depth_scaling.py
frontend/: README.md  eslint.config.mjs  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  vercel.json
frontend/.local-data/: jobs.json  uploads.json
frontend/__tests__/: api-integration.test.ts  server-auth-google.test.ts
frontend/e2e/: job-lifecycle.spec.ts  user-flow.spec.ts
frontend/playwright-report/: index.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/google/callback/: route.ts
frontend/src/app/api/auth/google/login/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/session/: route.ts
frontend/src/app/api/datasets/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/internal/jobs/dispatch/: route.ts
frontend/src/app/api/internal/jobs/progress/: route.ts
frontend/src/app/api/jobs/: route.ts
frontend/src/app/api/jobs/[id]/: route.ts
frontend/src/app/api/uploads/: route.ts
frontend/src/app/api/uploads/[id]/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: LoginClientPage.tsx  page.tsx
frontend/src/app/theme-preview/: page.tsx  theme-preview.module.css
frontend/src/lib/contracts/: jobs.ts
frontend/src/lib/server/: auth.ts  job-store.ts  upload-store.ts
frontend/test-results/: .last-run.json
output/: pipeline_output.txt  test_results.txt
src/: __init__.py
src/analysis/: __init__.py
src/analysis/circuit/: __init__.py  expressibility.py  resource_estimation.py
src/analysis/optimization/: __init__.py  gradient_analysis.py  loss_landscape.py
src/classical/: __init__.py
src/classical/baselines/: __init__.py  ensemble_methods.py  gaussian_processes.py  svm.py
src/classical/networks/: __init__.py  mlp.py
src/classical/regularization/: __init__.py
src/data/: __init__.py
src/data/loaders/: __init__.py  classification_datasets.py
src/hybrid/: __init__.py
src/hybrid/optimization/: __init__.py  rotosolve.py  spsa.py
src/hybrid/training/: __init__.py  train_loop.py
src/noise/: __init__.py
src/noise/mitigation/: __init__.py  measurement_error_mitigation.py  zero_noise_extrapolation.py
src/quantum/: __init__.py
src/quantum/circuits/: __init__.py  qaoa.py  qcnn.py  qgnn.py  qrnn.py  tensor_networks.py  vqc.py
src/quantum/encodings/: __init__.py  amplitude_encoding.py  angle_encoding.py  base.py  basis_encoding.py  hamiltonian_encoding.py  iqp_encoding.py
src/quantum/entanglement/: __init__.py  entanglement_strategies.py
src/quantum/gates/: __init__.py  parametric_gates.py  standard_gates.py
src/quantum/kernels/: __init__.py  quantum_kernel.py
src/quantum/measurements/: __init__.py  pauli_measurements.py  projective_measurements.py
src/utils/: __init__.py  config.py  logging.py  reproducibility.py
src/visualization/: __init__.py
src/visualization/circuits/: __init__.py  circuit_drawer.py
src/visualization/ml/: __init__.py  training_curves.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_circuits.py  test_encodings.py  test_worker_pipeline.py
worker/: .dockerignore  Dockerfile  README.md  requirements.txt
worker/app/: main.py  pipeline.py  runner.py  schemas.py
worker_service_deploy/: main.py
