[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-ml-classifier"
version = "0.1.0"
description = "State-of-the-art Quantum-Classical Hybrid Machine Learning System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"
authors = [
    {name = "Quantum ML Research Team"}
]
keywords = [
    "quantum-computing",
    "machine-learning",
    "tensorflow-quantum",
    "hybrid-quantum-classical",
    "variational-quantum-circuits"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core Quantum ML - TFQ requires specific TF version
    "tensorflow==2.15.0",
    "tensorflow-quantum==0.7.3",
    "cirq==1.3.0",
    "cirq-core==1.3.0",
    "sympy>=1.12,<2.0",
    
    # Classical ML
    "scikit-learn>=1.3.0,<2.0",
    "xgboost>=2.0.0,<3.0",
    "lightgbm>=4.0.0,<5.0",
    
    # Numerical & Scientific
    "numpy>=1.24.0,<2.0",
    "scipy>=1.11.0,<2.0",
    "pandas>=2.0.0,<3.0",
    
    # Visualization
    "matplotlib>=3.8.0,<4.0",
    "seaborn>=0.13.0,<1.0",
    "plotly>=5.18.0,<6.0",
    
    # Utilities
    "tqdm>=4.66.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "omegaconf>=2.3.0,<3.0",
    "loguru>=0.7.0,<1.0",
    "rich>=13.0.0,<14.0",
    "click>=8.1.0,<9.0",
    "python-dotenv>=1.0.0,<2.0",
    
    # Storage
    "h5py>=3.10.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.6.0",
]

full = [
    # Additional Quantum SDKs
    "qiskit>=0.45.0,<1.0",
    "qiskit-aer>=0.13.0,<1.0",
    "pennylane>=0.33.0,<1.0",
    
    # Deep Learning Extras
    "torch>=2.1.0,<3.0",
    "transformers>=4.35.0,<5.0",
    
    # Optimization
    "optuna>=3.4.0,<4.0",
    "ray[tune]>=2.8.0,<3.0",
    
    # Tensor Networks
    "quimb>=1.6.0,<2.0",
    "tensornetwork>=0.4.6,<1.0",
    
    # Dashboard & Logging
    "streamlit>=1.28.0,<2.0",
    "wandb>=0.16.0,<1.0",
    "tensorboard>=2.15.0,<3.0",
    
    # Graph Processing
    "networkx>=3.2.0,<4.0",
]

hardware = [
    "qiskit-ibm-runtime>=0.15.0,<1.0",
    "amazon-braket-sdk>=1.56.0,<2.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/RsEg7777/Quantum-ML-Classifier"
"Repository" = "https://github.com/RsEg7777/Quantum-ML-Classifier"

[project.scripts]
qml-train = "src.hybrid.training.train_loop:main"
qml-experiment = "experiments.run_all_experiments:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ==================== Tool Configurations ====================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_third_party = ["tensorflow", "cirq", "numpy", "scipy", "sklearn"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "notebooks/",
    "docs/",
    "build/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hardware: marks tests requiring quantum hardware",
    "benchmark: marks benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
